Created test ProductsSortTest